[tool.poetry]
name = "bbn"
version = "0.1.0"
description = ""
authors = ["Yuta Ono"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
black = "^23.7.0"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
import_heading_stdlib      = "Standard Library"
import_heading_thirdparty  = "Third Party Library"
import_heading_firstparty  = "First Party Library"
import_heading_localfolder = "Local Library"
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503"]
exclude = ["models", "model", ".git", "__pycache__"]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
